@@ -1,5 +1,11 @@
 2007-05-24  Brady Anderson <banderso@novell.com> 
 
+	* Banter/Account.cs: Commented out DisconnectHandlers() temporarily. 
+	  It's trapping and thus preventing the closing of our telepathy
+	  connection
+
+2007-05-24  Brady Anderson <banderso@novell.com> 
+
 	* Banter/Account.cs: added presence debug messages
 
 2007-05-23  Brady Anderson <banderso@novell.com> 
